--- a/project/frontend/templates/game.html
+++ b/project/frontend/templates/game.html
@@ -18,13 +18,13 @@
   <div>
     <center>
       <canvas id="gameArea" width="1024" height="600"></canvas>
-      <!-- <script type="module" src="../js/gameUI/utils.js"></script>
+      <script type="module" src="../js/gameUI/utils.js"></script>
       <script type="module" src="../js/gameUI/main-menu.js"></script>
       <script type="module" src="../js/gameUI/tournament-board.js"></script>
       <script type="module" src="../js/gameUI/players-board.js"></script>
       <script type="module" src="../js/gameUI/online-menu.js"></script>
       <script type="module" src="../js/gameUI/online-board.js"></script>
-      <script src="../js/gamePlay/Main.js" type="module"></script> -->
+      <!-- <script src="../js/gamePlay/Main.js" type="module"></script> -->
     </center>
   </div>
 </div>
